// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lists can be created by typing "/list" 1`] = `
"<!-- wp:list -->
<ul><li>I’m a list</li></ul>
<!-- /wp:list -->"
`;

exports[`Lists can be created by using a hyphen at the start of a RichText block 1`] = `
"<!-- wp:list -->
<ul><li>A list item</li></ul>
<!-- /wp:list -->"
`;

exports[`Lists can be created by using an asterisk at the start of a RichText block 1`] = `
"<!-- wp:list -->
<ul><li>A list item</li><li>Another list item</li></ul>
<!-- /wp:list -->"
`;
